--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <link type="text/css" rel="stylesheet"  href="/files/bootstrap/css/bootstrap.css" >
   <script type="text/javascript" src="/files/bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript" src="/files/bootstrap/js/bootstrap-transition.js"></script>
   <link type="text/css" rel="stylesheet/less" href="/files/css/cafod.less">
   <script type="text/javascript" src="/files/js/less.min.js"></script>
 	
