--- a/templates/privados/ver_nota.html
+++ b/templates/privados/ver_nota.html
@@ -37,7 +37,7 @@ $(".alert").alert();
         }
       }
   });
-
+  $('.username').tooltip({'placement':'bottom'});
 });
 </script>
 {%endblock%}
@@ -144,8 +144,16 @@ $(".alert").alert();
             <div class="encabezado-title raya">COMENTARIOS</div>
             {% for comentario in nota.comentarionotas_set.all %}         
             <div class="well" id="cmt{{comentario.id}}">{{comentario.comentario|safe}}
-              <div class="user-info"><i>escrito por</i> <img src="/files/img/avatarpeque.png" width="25" height="25"> <b>{{comentario.usuario.username}}</b> - {{comentario.fecha|date:"d M"}}
-                {% if comentario.usuario == request.user or request.user.is_superuser %}
+              <div class="user-info">
+                <i>escrito por</i>
+                {%if comentario.user.userprofile.avatar %}
+                <img src="{{comentario.user.userprofile.avatar.url_70x60}}" width="25" height="25">
+                {%else%}
+                <img src="/files/img/avatarpeque.png" width="25" height="25">
+                {%endif%}
+
+                 <b><a class="username" href="#" rel="tooltip" title="{{comentario.user.first_name}} - {{comentario.user.userprofile.contraparte}}">{{comentario.user.username}}</a></b> - {{comentario.fecha|date:"d M"}}
+                {% if comentario.user == request.user or request.user.is_superuser %}
                     <div class="btn-group foro-edit" style="float:right;">
                   <a data-fancybox-type="iframe"  class=" fancybox btn btn-mini" href="/foros/comentario/editar/{{comentario.id}}"><i class="icon-pencil"></i></a>
                   <a class="btn btn-mini" href="/foros/comentario/borrar/{{comentario.id}}"><i class="icon-trash"></i></a>
