--- a/templates/baseinterna.html
+++ b/templates/baseinterna.html
@@ -6,17 +6,18 @@
   <![endif]-->
 	<title>{%block title%}CAFOD{%endblock%}</title>
   <!--[<link type="text/css" rel="stylesheet"  href="/files/css/cafod.css">-->
+  {% load compress %}
+  {% compress css %}
+    <link type="text/css" rel="stylesheet"  href="/files/bootstrap/css/bootstrap.min.css" >
+    <link type="text/css" rel="stylesheet"  href="/files/css/cafod.css">
+    <link type="text/css" rel="stylesheet"  href="/files/css/jquery.fancybox.css" >
+  {% endcompress %}
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <link type="text/css" rel="stylesheet"  href="/files/bootstrap/css/bootstrap.css" >
-  <script type="text/javascript" src="/files/bootstrap/js/bootstrap.js"></script>
-  <script type="text/javascript" src="/files/bootstrap/js/bootstrap-transition.js"></script>
-
-
-  <link type="text/css" rel="stylesheet/less" href="/files/css/cafod.less">
-  <script type="text/javascript" src="/files/js/less.min.js"></script>
-
-  <script type="text/javascript" src="/files/js/fancybox.pack.js"></script>
-  <link type="text/css" rel="stylesheet"  href="/files/css/jquery.fancybox.css" >
+  {% compress js %}
+    <script type="text/javascript" src="/files/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/files/bootstrap/js/bootstrap-transition.js"></script>
+    <script type="text/javascript" src="/files/js/fancybox.pack.js"></script>
+  {% endcompress %}
   {%block extra_js%}{%endblock%}
 </head>
 <body>
