seccion de estadisticas

--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -544,6 +544,11 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	height:100px;
 }
 
+.opacidad-50{
+	opacity: 0.5;
+	-moz-opacity: 0.5;
+	filter:alpha(opacity=5);
+}
 //foro
 
 .aportes{
