--- a/templates/baseadmin.html
+++ b/templates/baseadmin.html
@@ -40,16 +40,18 @@
         <div class="navbar-inner">
             <div class="container">
               <a class="brand" href="/">
-                Plataforma de comunicacion y aprendizaje
+                <i class="icon-home icon-white opacidad-50"></i>Plataforma de comunicacion y aprendizaje
               </a>
               <ul class="nav pull-right">
                   <li class="divider-vertical"></li>
                   {% if user.username %}
-                    <li ><a href="/foros/perfil">Bienvenido {{ user.username }}</a></li>
+                    <li ><a href="/foros/perfil"><i class="icon-user icon-white opacidad-50"></i>Bienvenido {{ user.username }}</a></li>
                     <li class="divider-vertical"></li>
-                    <li><a href="/accounts/logout" title="Salir de Administración">Salir</a></li>
+                    <li ><a href="/contrapartes/estadisticas/ver"><i class="icon-signal opacidad-50 icon-white"></i>Estadisticas</a></li>
+                    <li class="divider-vertical"></li>
+                    <li><a href="/accounts/logout" title="Salir de Administración"><i class="icon-off opacidad-50 icon-white"></i>Salir</a></li>
                   {% else %}
-                    <li><a href="/accounts/login">Entrar</a></li>
+                    <li><a href="/accounts/login"><i class="icon-user opacidad-50 icon-white"></i>Entrar</a></li>
                   {% endif %}
               </ul>
               <form class="navbar-search pull-right">
@@ -76,7 +78,7 @@
             <div class="divisor-barra-admin"></div>
             <a href="/foros/privado/multimedia_fotos" class="multimediaiconadmin">Multimedia</a>
             <div class="divisor-barra-admin"></div>
-            <a href="/foros/privado/multimedia_fotos" class="adminmensaje">Mensajes</a>
+            <a href="/contrapartes/mensaje/ver" class="adminmensaje">Mensajes</a>
             <div class="clean"></div>
           </div>
       </div>
