--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,11 +1,31 @@
-{% extends "base.html" %}
+{% extends "baseinterna.html" %}
 
 {% block title %} 
 	{{ flatpage.title }}
 {% endblock %}
 
 {% block contenido %}
-
-	{{ flatpage.content }}
+<div class="row" >
+    <div class="encabezado">
+      <div class="container">
+        <div class="row">
+          <div class="span5">
+            <div class="encabezado-title">
+            {{flatpage.title}}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
+<div class="row">
+      <div class="container">
+          <div class="row">
+            <div class="span12">
+                {{ flatpage.content }}<br><br>
+            </div>
+         </div>
+    </div>
+</div>
 
 {% endblock %}
