--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load google_cse_tags %}
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8" />
@@ -42,9 +42,7 @@
                     <li><a href="/accounts/login"><i class="icon-user opacidad-50 icon-white"></i>Entrar</a></li>
                   {% endif %}
               </ul>
-              <form class="navbar-search pull-right">
-                <input type="text" class="search-query" placeholder="Buscar">
-              </form>
+              {% load_searchform %}
             </div>
         </div>
     </div>
