--- a/django_google_cse/templates/django_google_cse/default.html
+++ b/django_google_cse/templates/django_google_cse/default.html
@@ -1,7 +1,7 @@
 {% extends "baseinterna.html" %}
 {% block title %}Busqueda{% endblock %}
 
-{% block extrahead %}
+{% block extra_js %}
 <link rel="stylesheet" href="http://www.google.com/cse/style/look/default.css" type="text/css" /> 
 <script src="http://www.google.com/jsapi" type="text/javascript"></script>
 <script type="text/javascript"> 
