--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                     <img src="/files/img/banner.png">
                 </div>
                <div class="span6 bienvenida">
-                   <div id="bienvenida-title">Programa Medios de Vida Sostenible </div>
+                   <div id="bienvenida-title">Programa Medios de Vida Sostenible y Gestión de Riesgo </div>
                    Fortaleciendo la alianza entre las organizaciones socias del programa de medios de vida de CAFOD en Centroamérica para mejorar el aprendizaje e impacto de los proyectos.
                </div>
             </div>
