--- a/templates/contrapartes/editar_usuario.html
+++ b/templates/contrapartes/editar_usuario.html
@@ -1,15 +1,52 @@
 {% extends "baseadmin.html" %}
 
 {% block contenido %}
-
+<div class="row">
+    <div class="encabezado">
+      <div class="container">
+            <div class="row">
+                <div class="span5">
+                    <div class="encabezado-title">
+                        EDITAR USUARIO
+                    </div>
+                </div>
+                <div class="span7">
+                </div>
+            </div>
+      </div>
+    </div>
+</div>
 <form enctype="multipart/form-data" method="post" action=".">{% csrf_token %}
-	{{ form.media }}
 
-	{{form.as_p}}
-	{{form1.as_p}}
 				
-	<input class="btn btn-large btn-success " style="" type="submit" id="submitfoo" value="Guardar" />
+	
 				
 </form>
+<div class="row">
+	<div class="container">
+		<div class="row">
 
+			<form enctype="multipart/form-data" method="post" action=".">{% csrf_token %}
+					{{ form.media }}
+			<div class="span9">
+							<div class="well">
+				{{ form.media }}
+
+	{{form.as_p}}
+	{{form1.as_p}}	
+</div>
+			</div>
+			<div class="span3">
+				<div class="alert "><i class="icon-info-sign"></i>
+				  Editar informacion general del usuario
+				</div>
+				<div class="well" id="actionbuttons">
+				<input class="btn btn-large btn-success " style="" type="submit" id="submitfoo" value="Guardar" />
+				<a href="/foros/perfil" class="btn btn-large">Cerrar</a>
+				</div>
+			</div>
+			</form>
+		</div>
+	</div>
+</div>
 {% endblock%}
