--- a/templates/foros/ver_foro.html
+++ b/templates/foros/ver_foro.html
@@ -50,9 +50,23 @@ $(document).ready(function() {
                 	{% if discusion.contraparte == request.user or request.user.is_superuser %}
                     <div class="btn-group filtrospais">
                         <a href="/foros/editar/{{discusion.id}}" class="btn"><i class="icon-pencil"></i>Editar foro</a>
+                        <a class="btn" data-toggle="modal" data-target="#myModal"  ><i class="icon-remove-sign"></i>Borrar</a>
                         <a href="#formaporte" class="btn"><i class="icon-comment"></i>Aportar al foro</a>
                     </div>
                     {%endif%}
+		               <div class="modal fade hide" id="myModal">
+		                          <div class="modal-header">
+		                            <a class="close" data-dismiss="modal">×</a>
+		                            <h3>Esta Seguro?</h3>
+		                          </div>
+		                          <div class="modal-body">
+		                            <p>La nota sera borrada permanentemente y no podra ser recuperada</p>
+		                          </div>
+		                          <div class="modal-footer">
+		                            <a href="#" data-dismiss="modal" class="btn">Cerrar</a>
+		                            <a href="/notas/borrar/{{nota.id}}" class="btn btn-danger">Borrar Permanentemente</a>
+		                          </div>
+		                 </div>  
                 </div>
             </div>
       </div>
