--- a/templates/privados/ver_nota.html
+++ b/templates/privados/ver_nota.html
@@ -64,7 +64,7 @@ $(".alert").alert();
                             <h3>Esta Seguro?</h3>
                           </div>
                           <div class="modal-body">
-                            <p>La nota sera borrada permanentemente y no podra ser recuperada</p>
+                            <p>El foro y todos sus aportes seran borrados permanentemente y no podra ser recuperada</p>
                           </div>
                           <div class="modal-footer">
                             <a href="#" data-dismiss="modal" class="btn">Cerrar</a>
@@ -91,7 +91,7 @@ $(".alert").alert();
             </div>
             <div class="span5">
                 
-                <a class="contraparte-nota btn " href="/contrapartes/{{notas.contraparte.id}}"><img src="{{nota.contraparte.logo.url_70x60}}">{{nota.user.userprofile.contraparte.nombre}}</a>
+                <a class="contraparte-nota btn " href="/contrapartes/{{nota.contraparte.id}}"><img src="{{nota.contraparte.logo.url_70x60}}">{{nota.user.userprofile.contraparte.nombre}}</a>
             </div>
         </div>
         <div class="row ">
