messages de notificacion

--- a/templates/agendas/agenda_list.html
+++ b/templates/agendas/agenda_list.html
@@ -63,6 +63,18 @@
 </div>
 <div class="row">
 	<div class="container">
+		{% if request.GET.shva == 'erase' %}
+            <div class="alert fade in">
+                Se ha eliminado el evento de forma permanente
+                <a class="close" href="#" data-dismiss="alert">x</a>
+            </div>
+        {% endif %}
+		{% if request.GET.shva == 'editada' %}
+            <div class="alert fade in">
+                El evento ha sido editado
+                <a class="close" href="#" data-dismiss="alert">x</a>
+            </div>
+        {% endif %}
 		{%if actividad %}
 		<div class="row">
 			<div  {%if actividad.adjunto.all %}class="span8"{%else%} class="span12"{%endif%}>
