--- a/templates/foros/foro_list.html
+++ b/templates/foros/foro_list.html
@@ -23,6 +23,12 @@
 
 <div class="row">
 	<div class="container">
+		{% if request.GET.b == 'borrado' %}
+            <div class="alert fade in">
+                Se ha eliminado el foro de forma permanente
+                <a class="close" href="#" data-dismiss="alert">x</a>
+            </div>
+        {% endif %}
 		{% for foro in object_list %}
 		<div class="row">
 			<div class="span2">
