--- a/templates/foros/ver_foro.html
+++ b/templates/foros/ver_foro.html
@@ -50,8 +50,8 @@ $(document).ready(function() {
                 	{% if discusion.contraparte == request.user or request.user.is_superuser %}
                     <div class="btn-group filtrospais">
                         <a href="/foros/editar/{{discusion.id}}" class="btn"><i class="icon-pencil"></i>Editar foro</a>
-                        <a class="btn" data-toggle="modal" data-target="#myModal"  ><i class="icon-remove-sign"></i>Borrar</a>
                         <a href="#formaporte" class="btn"><i class="icon-comment"></i>Aportar al foro</a>
+                        <a class="btn" data-toggle="modal" data-target="#myModal"  ><i class="icon-remove-sign"></i>Borrar</a>
                     </div>
                     {%endif%}
 		               <div class="modal fade hide" id="myModal">
@@ -60,11 +60,11 @@ $(document).ready(function() {
 		                            <h3>Esta Seguro?</h3>
 		                          </div>
 		                          <div class="modal-body">
-		                            <p>La nota sera borrada permanentemente y no podra ser recuperada</p>
+		                            <p>El foro y todos sus aportes seran borrados permanentemente y no podran ser recuperados</p>
 		                          </div>
 		                          <div class="modal-footer">
 		                            <a href="#" data-dismiss="modal" class="btn">Cerrar</a>
-		                            <a href="/notas/borrar/{{nota.id}}" class="btn btn-danger">Borrar Permanentemente</a>
+		                            <a href="/foros/borrar/{{discusion.id}}" class="btn btn-danger">Borrar Permanentemente</a>
 		                          </div>
 		                 </div>  
                 </div>
@@ -74,6 +74,12 @@ $(document).ready(function() {
 </div>
 <div class="row">
 	<div class="container">
+		{% if request.GET.b == 'editado' %}
+            <div class="alert fade in">
+                 El foro ha sido editado
+                <a class="close" href="#" data-dismiss="alert">x</a>
+            </div>
+        {% endif %}
 		<div class="row">
 			<div class="span8">
 				<h1 class="titulo-grande">{{discusion.nombre}}</h1>
