--- a/templates/privados/ver_nota.html
+++ b/templates/privados/ver_nota.html
@@ -64,7 +64,7 @@ $(".alert").alert();
                             <h3>Esta Seguro?</h3>
                           </div>
                           <div class="modal-body">
-                            <p>El foro y todos sus aportes seran borrados permanentemente y no podra ser recuperada</p>
+                            <p>La nota sera borrada permanentemente y no podra ser recuperada</p>
                           </div>
                           <div class="modal-footer">
                             <a href="#" data-dismiss="modal" class="btn">Cerrar</a>
