--- a/templates/contrapartes/crear_contraparte.html
+++ b/templates/contrapartes/crear_contraparte.html
@@ -56,6 +56,9 @@
 					<label class="control-label">{{form.nombre.label}}</label>
 					{{form.nombre}}
 					<hr>
+					<label class="control-label">{{form.siglas.label}}</label>
+					{{form.siglas}}
+					<hr>
 					<label class="control-label">{{form.pais.label}}</label>
 					{{form.pais}}
 					<hr>
