--- a/templates/foros/ver_foro.html
+++ b/templates/foros/ver_foro.html
@@ -99,8 +99,13 @@ $(document).ready(function() {
 				<table class="table table-bordered table-condensed table-striped">
 					<tbody>
 						<tr>
+							<td><img src="/files/img/user.png"></td>
+							<td><b>Creado por</b></td>
+							<td>{{discusion.contraparte}} - {{discusion.contraparte.userprofile.contraparte.siglas}}</td>
+						</tr>
+						<tr>
 							<td><img src="/files/img/date.png"></td>
-							<td><b>Creado</b></td>
+							<td><b>Fecha de Creación</b></td>
 							<td>{{discusion.creacion}}</td>
 						</tr>
 						<tr>
