eventos en index

--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -197,6 +197,40 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	}
 }
 
+.eventoindex{
+	background: url(/files/img/eventoindex.jpg) no-repeat;
+	height:308px;
+}
+
+.index-fechaevento{
+	color:#5e573d;
+	font-size:25px;
+	margin-top:55px;
+	font-weight:bold;
+	.text-shadow(0px,1px,0px,#e1dfd0)
+}
+
+.index-nombreevento{
+	color:#bb6039;
+	font-weight:bold;
+	font-size:14px;
+	padding:15px;
+	margin-top:35px;
+	a{
+		color:#bb6039;
+		text-decoration:none;
+		&:hover{
+			color:#763b24;
+		}
+	}
+}
+
+.index-descripevento{
+	color:#423724;
+	font-size:11px;
+	padding:15px;
+}
+
 .pais-footer{
 	font-size:13px;
 	color:#888;
