--- a/templates/notas/notas_detail.html
+++ b/templates/notas/notas_detail.html
@@ -75,7 +75,7 @@ $(".alert").alert();
             </div>
             <div class="span5">
                 
-                <a class="contraparte-nota btn " href="/contrapartes/{{nota.contraparte.id}}"><img src="{{nota.contraparte.logo.url_70x60}}">{{nota.user.userprofile.contraparte.nombre}}</a>
+                <a class="contraparte-nota btn " href="/contrapartes/{{nota.user.userprofile.contraparte.id}}"><img src="{{nota.user.userprofile.contraparte.logo.url_70x60}}">{{nota.user.userprofile.contraparte.nombre}}</a>
             </div>
         </div>
         <div class="row ">
