--- a/templates/notas/notas_detail.html
+++ b/templates/notas/notas_detail.html
@@ -101,7 +101,7 @@ $(".alert").alert();
                     <div class="clean"></div>
                 </div>
                 {%endif%}
-                
+                    {%if notas.adjuntos.count > 1%}
                     <div class="sidebar-title">Documentos</div>
                     <div class="dividerline"></div>
                     <table class="table  table-bordered table-condensed doc-sidebar">
@@ -114,6 +114,7 @@ $(".alert").alert();
                         {% endfor %}
                       </tbody>
                     </table>
+                {%endif%}
                 
             </div>
         </div>
