cambiando labels a siglas

--- a/templates/agendas/agenda_list_full.html
+++ b/templates/agendas/agenda_list_full.html
@@ -155,7 +155,7 @@
 						 		<div class="leyenda"style ="background:{{contraparte.font_color}}"></div>
 								<label class="checkbox">
 								<input type="checkbox" name="contraparte" value="{{contraparte.id}}">
-								{{contraparte}}
+								{{contraparte.siglas}}
 								</label>
 						 		{%endif%}
 						 	{% endfor %}
