--- a/templates/agendas/agenda_list_public.html
+++ b/templates/agendas/agenda_list_public.html
@@ -106,7 +106,7 @@
 						 		{% if contraparte.pais.id == pais.id%}
 						 		<div class="leyenda"style ="margin-right:5px;background:{{contraparte.font_color}}"></div>
 						 		<li>
-									{{contraparte}}
+									{{contraparte.siglas}}
 								</li>
 								<div class="clean" style="margin-bottom:5px"></div>
 						 		{%endif%}
