--- a/templates/agendas/agenda_list.html
+++ b/templates/agendas/agenda_list.html
@@ -143,7 +143,7 @@
 						 		{% if contraparte.pais.id == pais.id%}
 						 		<div class="leyenda"style ="background:{{contraparte.font_color}}"></div>
 						 		<li>
-									<label class="checkbox"><input type="checkbox" name="contraparte" value="{{contraparte.id}}" >{{contraparte}}</input></label>
+									<label class="checkbox"><input type="checkbox" name="contraparte" value="{{contraparte.id}}" >{{contraparte.siglas}}</input></label>
 								</li>
 						 		{%endif%}
 						 	{% endfor %}
