--- a/templates/privados/notas.html
+++ b/templates/privados/notas.html
@@ -44,7 +44,7 @@
 						<div class="extrainfo">{{nota.fecha}}  |  {{nota.user.userprofile.pais.nombre}} | {{nota.user.userprofile.contraparte.nombre}}</div>
 						<a href="/notas/ver/{{nota.id}}" class="titulo-medio">{{nota.titulo}}</a><br>
 						{{nota.contenido|safe|truncatewords_html:50}} <br><br>
-						<a href="/notas/ver/{{nota.id}}" class="btn btn-success btn-mini">Leer mas</a>
+						<a href="/notas/ver/{{nota.id}}" class="btn btn-success btn-mini">Leer más</a>
 				</div>
 			</div>
 			<hr>
