--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,8 @@
         <div class="row">
           <div class="span12" id="menulogo">
               <div class="row">
-                  <div class="span6 offset6" id="menu">
+                  <div class="span8 offset4" id="menu">
+                    <a href="/notas" class="iniciomenu">Inicio</a>
                       <a href="/notas" class="blogmenu">Notas</a>
                       <a href="/acerca" class="acercamenu">Acerca de</a>
                       <a href="/contrapartes" class="contrapartemenu">Contrapartes</a>
