--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -52,7 +52,7 @@
 					<p>Martha Olivera
 					<b>martha@simas.org.ni</b></p>
 
-					<p>Wiston Berrios
+					<p>Winston Berrios
 					<b>wberrios@cafod.org.uk </b></p>
 				</div>
 			</div>
