--- a/templates/baseinterna.html
+++ b/templates/baseinterna.html
@@ -53,8 +53,8 @@
         <div class="row">
           <div class="span12" id="menulogo">
               <div class="row">
-                  <div class="span6 offset6" id="menu">
-                      <a href="/notas" class="blogmenu">Notas</a>
+                  <div class="span8 offset4" id="menu">
+                    <a href="/notas" class="iniciomenu">Inicio</a>
                       <a href="/acerca" class="acercamenu">Acerca de</a>
                       <a href="/contrapartes" class="contrapartemenu">Contrapartes</a>
                       <a href="/agendas/eventos" class="eventomenu">Eventos</a>
