--- a/templates/baseinterna.html
+++ b/templates/baseinterna.html
@@ -54,7 +54,7 @@
           <div class="span12" id="menulogo">
               <div class="row">
                   <div class="span8 offset4" id="menu">
-                    <a href="/notas" class="iniciomenu">Inicio</a>
+                    <a href="/" class="iniciomenu">Inicio</a>
                       <a href="/acerca" class="acercamenu">Acerca de</a>
                       <a href="/contrapartes" class="contrapartemenu">Contrapartes</a>
                       <a href="/agendas/eventos" class="eventomenu">Eventos</a>
