--- a/templates/baseinterna.html
+++ b/templates/baseinterna.html
@@ -55,6 +55,7 @@
               <div class="row">
                   <div class="span8 offset4" id="menu">
                     <a href="/" class="iniciomenu">Inicio</a>
+                    <a href="/notas" class="blogmenu">Notas</a>
                       <a href="/acerca" class="acercamenu">Acerca de</a>
                       <a href="/contrapartes" class="contrapartemenu">Contrapartes</a>
                       <a href="/agendas/eventos" class="eventomenu">Eventos</a>
