--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -6,7 +6,7 @@
                     <table>
                         {{ form.as_table }}
                     </table> <br/>
-                    <input type = "submit" value = "Cambiar Contraseña" />
+                    <a href="javascript:parent.jQuery.fancybox.close();" ><input type="submit" value="Cambiar Contraseña"></a>
                 </form>
         
         </div>
