--- a/templates/contrapartes/editar_usuario.html
+++ b/templates/contrapartes/editar_usuario.html
@@ -49,7 +49,7 @@
 	{{form.as_p}}
 	{{form1.as_p}}
 	<br>
-	<a data-fancybox-type="iframe" class="fancybox" href="/password_change/">Cambiar contraseña</a>
+	<a data-fancybox-type="iframe" class="fancybox btn" href="/password_change/"><i class="icon-lock"></i>Cambiar contraseña</a>
 	<div id="resultados" style="display: none"></div>	
 </div>
 			</div>
