--- a/templates/contrapartes/mensaje.html
+++ b/templates/contrapartes/mensaje.html
@@ -42,10 +42,10 @@
 			<div class="span6">
 				<div class="alert alert-success">Crear mensajes</div>
 				<div class="well mensajeform">
+					<center><a class='btn btn-success' href="javascript:seleccionar_todo()"><i class="icon-ok icon-white"></i>Seleccionar todos</a></center>
 					<form name='fl' action="." method="post" accept-charset="utf-8">{% csrf_token %}
 						{{form.media}}
 						{{form.user}}<br>
-						<a class='btn-success' href="javascript:seleccionar_todo()">Seleccionar todos</a>
 						<div class="clean"></div><br>
 						{{form.mensaje}}<Br>
 						<input type="submit" class="btn btn-success" name="enviar" value="Enviar">
