--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,3 +1,8 @@
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+  <link type="text/css" rel="stylesheet"  href="/files/bootstrap/css/bootstrap.css" >
+  <script type="text/javascript" src="/files/bootstrap/js/bootstrap.js"></script>
+  <link type="text/css" rel="stylesheet/less" href="/files/css/cafod.less">
+  <script type="text/javascript" src="/files/js/less.min.js"></script>
 {% block contenido %}
         <div id="titulo">
     
@@ -6,7 +11,7 @@
                     <table>
                         {{ form.as_table }}
                     </table> <br/>
-                    <a href="javascript:parent.jQuery.fancybox.close();" ><input type="submit" value="Cambiar Contraseña"></a>
+                    <a href="javascript:parent.jQuery.fancybox.close();" ><input class="btn btn-success"type="submit" value="Cambiar Contraseña"></a>
                 </form>
         
         </div>
