--- a/templates/agendas/agenda_list.html
+++ b/templates/agendas/agenda_list.html
@@ -102,7 +102,7 @@
 	                            <p>El evento sera borrado permanentemente y no podra ser recuperado</p>
 	                          </div>
 	                          <div class="modal-footer">
-	                            <a href="#" data-dismiss="modal" class="btn">Cerrar</a>
+	                            <a href="#" data-dismiss="modal" class="btn">No Borrar</a>
 	                            <a href="/agendas/borrar/{{actividad.id}}" class="btn btn-danger">Borrar Permanentemente</a>
 	                          </div>
 	                        </div>  
@@ -143,7 +143,7 @@
 						 		{% if contraparte.pais.id == pais.id%}
 						 		<div class="leyenda"style ="background:{{contraparte.font_color}}"></div>
 						 		<li>
-									<label class="checkbox"><input type="checkbox" name="contraparte" value="{{contraparte.id}}" >{{contraparte.siglas}}</input></label>
+									<label class="checkbox"><input type="checkbox" name="contraparte" value="{{contraparte.id}}" >M{{contraparte.siglas}}</input></label>
 								</li>
 						 		{%endif%}
 						 	{% endfor %}
