--- a/templates/foros/ver_foro.html
+++ b/templates/foros/ver_foro.html
@@ -63,7 +63,7 @@ $(document).ready(function() {
 		                            <p>El foro y todos sus aportes seran borrados permanentemente y no podran ser recuperados</p>
 		                          </div>
 		                          <div class="modal-footer">
-		                            <a href="#" data-dismiss="modal" class="btn">Cerrar</a>
+		                            <a href="#" data-dismiss="modal" class="btn">No Borrar</a>
 		                            <a href="/foros/borrar/{{discusion.id}}" class="btn btn-danger">Borrar Permanentemente</a>
 		                          </div>
 		                 </div>  
@@ -230,7 +230,7 @@ $(document).ready(function() {
                     <p>El aporte sera borrado permanentemente y no podra ser recuperado</p>
                   </div>
                   <div class="modal-footer">
-                    <a href="#" data-dismiss="modal" class="btn">Cerrar</a>
+                    <a href="#" data-dismiss="modal" class="btn">No Borrar</a>
                     <a href="/foros/aporte/borrar/{{respuesta.id}}"class="btn btn-danger">Borrar Permanentemente</a>
                   </div>
                 </div>  
@@ -265,7 +265,7 @@ $(document).ready(function() {
 			                    <p>El comentario sera borrado permanentemente y no podra ser recuperado</p>
 			                  </div>
 			                  <div class="modal-footer">
-			                    <a href="#" data-dismiss="modal" class="btn">Cerrar</a>
+			                    <a href="#" data-dismiss="modal" class="btn">No Borrar</a>
 			                    <a href="/foros/comentario/borrar/{{comentario.id}}"class="btn btn-danger">Borrar Permanentemente</a>
 			                  </div>
 			                </div>  
