--- a/templates/privados/ver_nota.html
+++ b/templates/privados/ver_nota.html
@@ -67,7 +67,7 @@ $(".alert").alert();
                             <p>La nota sera borrada permanentemente y no podra ser recuperada</p>
                           </div>
                           <div class="modal-footer">
-                            <a href="#" data-dismiss="modal" class="btn">Cerrar</a>
+                            <a href="#" data-dismiss="modal" class="btn">No Borrar</a>
                             <a href="/notas/borrar/{{nota.id}}" class="btn btn-danger">Borrar Permanentemente</a>
                           </div>
                         </div>  
