--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
       <div class="row">
          {% for nota in notas%}
             <div class="span3">
-             <div class="pais-index">{{nota.pais.nombre}}<img src="/files/img/{{nota.pais.codigo}}.png"></div>
+             <div class="pais-index">{{nota.user.userprofile.contraparte.pais.nombre}}<img src="/files/img/{{nota.user.userprofile.contraparte.pais.codigo}}.png"></div>
              {%for thumb in nota.fotos.all|slice:"1"%} 
                    <img class="imagen-noticia-index" src="{{thumb.foto.url_220x160}}">
              {%endfor%}
